--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,142 +1,111 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(5, 10px);
-  grid-template-rows: repeat(7, 10px);
-  grid-template-areas:
-    "a1 a2 a3 a4 a5"
-    "b1 b2 b3 b4 b5"
-    "c1 c2 c3 c4 c5"
-    "d1 d2 d3 d4 d5"
-    "e1 e2 e3 e4 e5"
-    "red orange yellow green blue"
-    "c c c c c"
+  grid-template-columns: repeat(10, 10px);
+  grid-template-rows: repeat(12, 10px);
+  justify-content: center;
 }
 
 .indicator {
-  grid-area: c;
+  grid-column: auto;
+  grid-row: auto;
 }
 
 .RED {
-  grid-area: red;
   background-color: red;
 }
 
 .ORANGE {
-  grid-area: orange;
   background-color: orange;
 }
 
 .YELLOW {
-  grid-area: yellow;
   background-color: yellow;
 }
 
 .GREEN {
-  grid-area: green;
   background-color: green;
 }
 
 .BLUE {
-  grid-area: blue;
   background-color: blue;
 }
 
-.a1 {
-  grid-area: a1;
+.INDIGO {
+  background-color: indigo;
 }
 
-.a2 {
-  grid-area: a2;
+.VIOLET {
+  background-color: violet;
 }
 
-.a3 {
-  grid-area: a3;
+.PINK {
+  background-color: pink;
 }
 
-.a4 {
-  grid-area: a4;
+.WHITE {
+  background-color: white;
 }
 
-.a5 {
-  grid-area: a5;
+.BLACK {
+  background-color: black;
 }
 
-.b1 {
-  grid-area: b1;
+.select.RED {
+  grid-column: 1;
+  grid-row: 11;
+  background-color: red;
 }
 
-.b2 {
-  grid-area: b2;
+.select.ORANGE {
+  grid-column: 2;
+  grid-row: 11;
+  background-color: orange;
 }
 
-.b3 {
-  grid-area: b3;
+.select.YELLOW {
+  grid-column: 3;
+  grid-row: 11;
+  background-color: yellow;
 }
 
-.b4 {
-  grid-area: b4;
+.select.GREEN {
+  grid-column: 4;
+  grid-row: 11;
+  background-color: green;
 }
 
-.b5 {
-  grid-area: b5;
+.select.BLUE {
+  grid-column: 5;
+  grid-row: 11;
+  background-color: blue;
 }
 
-.c1 {
-  grid-area: c1;
+.select.INDIGO {
+  grid-column: 6;
+  grid-row: 11;
+  background-color: indigo;
 }
 
-.c2 {
-  grid-area: c2;
+.select.VIOLET {
+  grid-column: 7;
+  grid-row: 11;
+  background-color: violet;
 }
 
-.c3 {
-  grid-area: c3;
+.select.PINK {
+  grid-column: 8;
+  grid-row: 11;
+  background-color: pink;
 }
 
-.c4 {
-  grid-area: c4;
+.select.WHITE {
+  grid-column: 9;
+  grid-row: 11;
+  background-color: white;
 }
 
-.c5 {
-  grid-area: c5;
-}
-
-.d1 {
-  grid-area: d1;
-}
-
-.d2 {
-  grid-area: d2;
-}
-
-.d3 {
-  grid-area: d3;
-}
-
-.d4 {
-  grid-area: d4;
-}
-
-.d5 {
-  grid-area: d5;
-}
-
-.e1 {
-  grid-area: e1;
-}
-
-.e2 {
-  grid-area: e2;
-}
-
-.e3 {
-  grid-area: e3;
-}
-
-.e4 {
-  grid-area: e4;
-}
-
-.e5 {
-  grid-area: e5;
+.select.BLACK {
+  grid-column: 10;
+  grid-row: 11;
+  background-color: black;
 }
